--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class="nav-center">
             <!-- nav header -->
             <div class="nav-header">
-                <img src="./logo.svg" class="logo" alt="logo">
+                <!-- <img src="./logo.svg" class="logo" alt="logo"> -->
+                <h1>NavBar</h1>
                 <button class="nav-toggle"><i class="fas fa-bars"></i></button>
             </div>
             <!-- links -->
