--- a/index.html
+++ b/index.html
@@ -18,37 +18,38 @@
             <!-- nav header -->
             <div class="nav-header">
                 <!-- <img src="./logo.svg" class="logo" alt="logo"> -->
-                <h1>NavBar</h1>
-                <button class="nav-toggle"><i class="fas fa-bars"></i></button>
+                <h1 id="title">NavBar</h1>
+                <button id="toggle"><i class="fas fa-bars"></i></button>
             </div>
+            <div class="gap1"></div>
             <!-- links -->
-            <ul class="links">
+            <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contacts.html">Contacts</a></li>
             </ul>
+            <div class="gap2"></div>
             <!-- Social media Links -->
-            <ul class="social-icons">
+            <ul class="nav-social-icons">
                 <li>
-                    <a href="https://www.twitter.com"></a>
-                    <i class="fab fa-twitter"></i>
+                    <a href="https://www.twitter.com"><i class="fab fa-twitter"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.twitter.com"></a>
-                    <i class="fab fa-facebook"></i>
+                    <a href="https://www.twitter.com"><i class="fab fa-facebook"></i></a>
+
                 </li>
                 <li>
-                    <a href="https://www.twitter.com"></a>
-                    <i class="fab fa-behance"></i>
+                    <a href="https://www.twitter.com"><i class="fab fa-behance"></i></a>
+
                 </li>
                 <li>
-                    <a href="https://www.twitter.com"></a>
-                    <i class="fab fa-linkedin"></i>
+                    <a href="https://www.twitter.com"><i class="fab fa-linkedin"></i></a>
+
                 </li>
                 <li>
-                    <a href="https://www.twitter.com"></a>
-                    <i class="fab fa-sketch"></i>
+                    <a href="https://www.twitter.com"><i class="fab fa-sketch"></i></a>
+
                 </li>
             </ul>
         </div>
